Get acknowledgment list from the server and grid display

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,9 @@
       <!--script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script-->
 
   </head>
-  <body>
+  <body  style="background-image:url('/assets/img/BG.png'); height: 100%;
+  margin: 0;
+  padding: 0;">
       <app-root>
           
           <div class="loader-container">
