--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       <!--script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script-->
 
   </head>
-  <body  style="background-image:url('/assets/img/BG.png'); height: 100%;
+  <body  style="background-image:url('/assets/img/bank1BKG.png'); height: 100%;
   margin: 0;
   padding: 0;">
       <app-root>
