--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,7 @@
       
 
   </head>
-  <body  style="background-image:url('./assets/img/bank1BKG.png'); height: 100%;
-  margin: 0;
-  padding: 0;">
+  <body  class="background-images">
       <app-root>
           
           <div class="loader-container">
