--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       <!--script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script-->
 
       
-
+      <script src="env.js"></script>
   </head>
   <body  class="background-images">
       <app-root>
